apptastico is very responsive

--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
             <div class="container flex-sb">
                 <p>©Design, Christoffer Jensen 2013. Development, K.R. Janssen</p>
                 <div class="social-media">
-                    <img src="img/icons/facebook-icon.png" alt="facebook">
-                    <img src="img/icons/twitter-icon.png" alt="twitter">
-                    <img src="img/icons/linkedin-icon.png" alt="linkedin">
-                    <img src="img/icons/dribble-icon.png" alt="dribble">
+                    <a href=""><img src="img/icons/facebook-icon.png" alt="facebook"></a>
+                    <a href=""><img src="img/icons/twitter-icon.png" alt="twitter"></a>
+                    <a href=""><img src="img/icons/linkedin-icon.png" alt="linkedin"></a>
+                    <a href=""><img src="img/icons/dribble-icon.png" alt="dribble"></a>
                 </div>
             </div>
         </footer>
