float css removed

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <section class="community">
                 <div class="container flex-sb">
                     <div class="blog">
-                        <div class="intro">
+                        <div class="intro flex">
                             <img src="img/icons/ourblog.png" alt="blog">
                             <h3>From our blog</h3>
                         </div>
